src/kubernetes/ingress-simple-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  labels:
    app: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: app
        image: gpupo/container-orchestration:simpleHTTPServer-latest
        ports:
          - containerPort: 8000
---
kind: Service
apiVersion: v1
metadata:
  name: app
spec:
  selector:
    app: app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app
spec:
  rules:
  - host: ingress.localhost
    http:
      paths:
      - backend:
          serviceName: app
          servicePort: 80
